--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,13 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.springframework.security</groupId>
+     <artifactId>spring-security-core</artifactId>
+     <version>5.1.6.RELEASE</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
